updated the meet our team on the index file

--- a/html-files/index.html
+++ b/html-files/index.html
@@ -329,7 +329,7 @@
             <p>All of our Real Estate Agents have undergone years of training and experience to help you both; find and sell your home.</p>
             <div class="team-mates">
 
-                <a href="/html-files/staff.html" class="agent">
+                <a href="/html-files/staff.html" class="agent" id="first-agent">
                     <div class="agent-profile-picture">
                         <img src="/photos/agents/agent1.jpg" alt="">
                     </div>
@@ -439,8 +439,16 @@
                     </div>
                 </a>
 
+                <a href="/html-files/staff.html" class="agent" id="last-agents">
+                    <div class="all-real-agents">
+                        <h3>Can't Decide?</h3>
+                        <p>We have plenty more Agents that can help you with your needs</p>
+                        <p class="par-arrow">See All of our Real Estate Agents <i class="fa-solid fa-arrow-right"></i></p>
+                    </div>
+                </a>
+
             </div>
-            <p class="under-text-team">If one of our Agents caught your eye, don't be shy and contact them through clicking on their profile! <br> If none interested, you can find more Agents by scrolling to the end or clicking <a href="">here</a>, or you can fill out a contact form and be asigned a Agent best suited for your needs.</p>
+            <p class="under-text-team">If one of our Agents caught your eye, don't be shy and contact them through clicking on their profile! <br> If none interested, you can find more Agents by scrolling to the end or clicking <a href="/html-files/contact.html">here</a>, or you can fill out a contact form and be asigned a Agent best suited for your needs.</p>
         </section>
 
 
