--- a/buy-files/latvia.html
+++ b/buy-files/latvia.html
@@ -382,6 +382,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-jumala-last">
+                <div class="estate-photo">
+                    <img src="../photos/w991x660.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="flex-three-info-boxes wrap">
