responsive index html page, almost finished

--- a/html-files/index.html
+++ b/html-files/index.html
@@ -337,7 +337,7 @@
                         <h4>Full Name</h4>
                         <p>Years of Experience</p>
                         <p>Expertiese</p>
-                        <p>Location</p>
+                        <p class="agent-location">Location</p>
                         <div class="contact-info-agent">
                             <div class="agent-phone">
                                 <i class="fa-solid fa-phone"></i>
@@ -359,7 +359,7 @@
                         <h4>Full Name</h4>
                         <p>Years of Experience</p>
                         <p>Expertiese</p>
-                        <p>Location</p>
+                        <p class="agent-location">Location</p>
                         <div class="contact-info-agent">
                             <div class="agent-phone">
                                 <i class="fa-solid fa-phone"></i>
@@ -381,7 +381,7 @@
                         <h4>Full Name</h4>
                         <p>Years of Experience</p>
                         <p>Expertiese</p>
-                        <p>Location</p>
+                        <p class="agent-location">Location</p>
                         <div class="contact-info-agent">
                             <div class="agent-phone">
                                 <i class="fa-solid fa-phone"></i>
@@ -403,7 +403,7 @@
                         <h4>Full Name</h4>
                         <p>Years of Experience</p>
                         <p>Expertiese</p>
-                        <p>Location</p>
+                        <p class="agent-location">Location</p>
                         <div class="contact-info-agent">
                             <div class="agent-phone">
                                 <i class="fa-solid fa-phone"></i>
@@ -425,7 +425,7 @@
                         <h4>Full Name</h4>
                         <p>Years of Experience</p>
                         <p>Expertiese</p>
-                        <p>Location</p>
+                        <p class="agent-location">Location</p>
                         <div class="contact-info-agent">
                             <div class="agent-phone">
                                 <i class="fa-solid fa-phone"></i>
