--- a/buy-files/england.html
+++ b/buy-files/england.html
@@ -136,6 +136,23 @@
 
         <div class="estate-birmingham wrap">
             <h2>Birmingham Properties</h2>
+            <div class="property-birimingham">
+                <div class="estate-photo">
+                    <img src="../photos/590-S-Lake-Shore-Dr-Lake-Geneva-2021-04-12-realtordotcom.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$55.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-bristol wrap">
