fixed the rent.html code and side filter

--- a/html-files/rent-detail.html
+++ b/html-files/rent-detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
-    <link rel="stylesheet" href="../css-files/property-details.css">
+    <link rel="stylesheet" href="/css-files/rent-detail.css">
     <meta charset="UTF-8">
     <meta name="Rent Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
