--- a/html-files/properties-all.html
+++ b/html-files/properties-all.html
@@ -152,7 +152,7 @@
                     </div>
                 </a>
 
-                <a href="/html-files/rent-detail.html" class="property" id="house">
+                <a href="/html-files/house-detail.html" class="property" id="house">
                     <div class="type">
                         <p>House</p>
                     </div>
@@ -182,7 +182,7 @@
                     </div>
                 </a>
 
-                <a href="/html-files/rent-detail.html" class="property" id="house">
+                <a href="/html-files/house-detail.html" class="property" id="house">
                     <div class="type">
                         <p>House</p>
                     </div>
@@ -197,7 +197,7 @@
                     </div>
                 </a>
 
-                <a href="/html-files/rent-detail.html" class="property" id="house">
+                <a href="/html-files/house-detail.html" class="property" id="house">
                     <div class="type">
                         <p>House</p>
                     </div>
@@ -242,7 +242,7 @@
                     </div>
                 </a>
 
-                <a href="/html-files/rent-detail.html" class="property"id="house">
+                <a href="/html-files/house-detail.html" class="property"id="house">
                     <div class="type">
                         <p>House</p>
                     </div>
@@ -257,7 +257,7 @@
                     </div>
                 </a>
 
-                <a href="/html-files/rent-detail.html" class="property"id="house">
+                <a href="/html-files/house-detail.html" class="property"id="house">
                     <div class="type">
                         <p>House</p>
                     </div>
@@ -287,7 +287,7 @@
                     </div>
                 </a>
 
-                <a href="/html-files/rent-detail.html" class="property"id="house">
+                <a href="/html-files/house-detail.html" class="property"id="house">
                     <div class="type">
                         <p>House</p>
                     </div>
@@ -302,7 +302,7 @@
                     </div>
                 </a>
 
-                <a href="/html-files/rent-detail.html" class="property" id="house">
+                <a href="/html-files/house-detail.html" class="property" id="house">
                     <div class="type">
                         <p>House</p>
                     </div>
@@ -392,7 +392,7 @@
                     </div>
                 </a>
 
-                <a href="/html-files/rent-detail.html" class="property" id="house">
+                <a href="/html-files/house-detail.html" class="property" id="house">
                     <div class="type">
                         <p>House</p>
                     </div>
