fixed some issues

--- a/html-files/rent-detail.html
+++ b/html-files/rent-detail.html
@@ -161,6 +161,10 @@
 
     <main class="page-body2">
     
+        <div class="gobackbutton">
+            <button onclick="history.back()"><i class="fa-solid fa-arrow-left"></i> Go Back</button>
+        </div>
+
         <section class="content">
 
             <div class="content-looks-info">
