finished house detail.html, CSS and JS for the html page as well

--- a/html-files/house-detail.html
+++ b/html-files/house-detail.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta name="Rent Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
-    <script src="/JavaScript/property-details.js" defer></script>
-    <script src="/JavaScript/property-details2.js" defer></script>
+    <script src="/JavaScript/rent-details.js" defer></script>
+    <script src="/JavaScript/rent-details2.js" defer></script>
     <title>Radahns Eco Modernism</title>
 </head>
 
@@ -280,8 +280,8 @@
                         </div>
                     </div>
 
-                    <a class="prev2" onclick="plusSlides(-1)"><i class="fa-solid fa-arrow-left"></i></a>
-                    <a class="next2" onclick="plusSlides(1)"><i class="fa-solid fa-arrow-right"></i></a>
+                    <a class="prev2" onclick="plusSlides2(-1)"><i class="fa-solid fa-arrow-left"></i></a>
+                    <a class="next2" onclick="plusSlides2(1)"><i class="fa-solid fa-arrow-right"></i></a>
 
                 </div>
 
@@ -309,7 +309,7 @@
                 <div class="property-location">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4965.528411245755!2d-0.15778155807615565!3d51.51754179027588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761acdabd7f677%3A0xa3fa518b103821ce!2s22b%20Baker%20St%2C%20London%20W1U%203BW%2C%20UK!5e0!3m2!1sen!2sno!4v1712009877143!5m2!1sen!2sno" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                
+
                 <div class="desc-contact">
                     <div class="property-description">
                         <h2>Property Description</h2>
