made a apartment details html page

--- a/html-files/index.html
+++ b/html-files/index.html
@@ -86,7 +86,7 @@
             <div class="properties">
 
                     <div class="property">
-                        <a href="/html-files/property-detail.html">
+                        <a href="/html-files/house-detail.html">
                             <div class="property-type">
                                 <p>House</p>
                             </div>
@@ -99,7 +99,7 @@
                     </div>
 
                     <div class="property">
-                        <a href="/html-files/property-detail.html">
+                        <a href="/html-files/ap-detail.html">
                             <div class="property-type">
                                 <p>Apartment</p>
                             </div>
@@ -112,7 +112,7 @@
                     </div>
 
                     <div class="property">
-                        <a href="/html-files/property-detail.html">
+                        <a href="/html-files/house-detail.html">
                             <div class="property-type">
                                 <p>House</p>
                             </div>
@@ -125,7 +125,7 @@
                     </div>
 
                     <div class="property">
-                        <a href="/html-files/property-detail.html">
+                        <a href="/html-files/ap-detail.html">
                             <div class="property-type">
                                 <p>Apartment</p>
                             </div>
@@ -138,7 +138,7 @@
                     </div>
 
                     <div class="property">
-                        <a href="/html-files/property-detail.html">
+                        <a href="/html-files/house-detail.html">
                             <div class="property-type">
                                 <p>House</p>
                             </div>
@@ -151,7 +151,7 @@
                     </div>
 
                     <div class="property">
-                        <a href="/html-files/property-detail.html">
+                        <a href="/html-files/ap-detail.html">
                             <div class="property-type">
                                 <p>Apartment</p>
                             </div>
@@ -246,7 +246,7 @@
             <div class="properties" id="rentals">
 
                     <div class="property" id="rental">
-                        <a href="house-detail.html">
+                        <a href="/html-files/rent-detail.html">
                             <img src="/photos/ap1.webp" alt="">
                             <div class="property-info">
                                 <h4>Property Name</h4>
@@ -256,7 +256,7 @@
                     </div>
 
                     <div class="property" id="rental">
-                        <a href="rent-detail.html">
+                        <a href="/html-files/rent-detail.html">
                             <img src="/photos/ap10.jpg" alt="">
                             <div class="property-info">
                                 <h4>Property Name</h4>
@@ -266,7 +266,7 @@
                     </div>
 
                     <div class="property" id="rental">
-                        <a href="house-detail.html">
+                        <a href="/html-files/rent-detail.html">
                             <img src="/photos/ap11.jpg" alt="">
                             <div class="property-info">
                                 <h4>Property Name</h4>
@@ -276,7 +276,7 @@
                     </div>
 
                     <div class="property" id="rental">
-                        <a href="rent-detail.html">
+                        <a href="/html-files/rent-detail.html">
                             <img src="/photos/ap12.jpg" alt="">
                             <div class="property-info">
                                 <h4>Property Name</h4>
@@ -286,7 +286,7 @@
                     </div>
 
                     <div class="property" id="rental">
-                        <a href="house-detail.html">
+                        <a href="/html-files/rent-detail.html">
                             <img src="/photos/ap13.jpg" alt="">
                             <div class="property-info">
                                 <h4>Property Name</h4>
@@ -296,7 +296,7 @@
                     </div>
 
                     <div class="property" id="rental">
-                        <a href="rent-detail.html">
+                        <a href="/html-files/rent-detail.html">
                             <img src="/photos/ap15.jpg" alt="">
                             <div class="property-info">
                                 <h4>Property Name</h4>
@@ -305,7 +305,7 @@
                         </a>
                     </div>
 
-                    <a href="all-properties.html" class="see-more-button">
+                    <a href="/html-files/rent.html" class="see-more-button">
                         <div class="grey-cloud">
                             <div class="property" id="last-rental">
                                 <div class="see-more">
