--- a/html-files/ap-detail.html
+++ b/html-files/ap-detail.html
@@ -189,15 +189,15 @@
 
                     <div class="slides2">
                         <div class="photo-number">2 / 6</div>
-                        <img src="/photos/bedroom2.jpg" alt="">
+                        <img src="/photos/fjordsap/bedroom.jpg" alt="">
                         <div class="photo-room2">
-                            <p>Bedroom</p>
+                            <p>Master Bedroom</p>
                         </div>
                     </div>
 
                     <div class="slides2">
                         <div class="photo-number">3 / 6</div>
-                        <img src="/photos/bedroom2.jpg" alt="">
+                        <img src="/photos/fjordsap/bedroom2.jpg" alt="">
                         <div class="photo-room2">
                             <p>Guest Bedroom</p>
                         </div>
@@ -205,7 +205,7 @@
 
                     <div class="slides2">
                         <div class="photo-number">4 / 6</div>
-                        <img src="/photos/bathroom.jpg" alt="">
+                        <img src="/photos/fjordsap/bathroom.jpg" alt="">
                         <div class="photo-room2">
                             <p>Bathroom</p>
                         </div>
@@ -213,7 +213,7 @@
 
                     <div class="slides2">
                         <div class="photo-number">5 / 6</div>
-                        <img src="/photos/kitchn2.webp" alt="">
+                        <img src="/photos/fjordsap/kitchen.avif" alt="">
                         <div class="photo-room2">
                             <p>Kitchen</p>
                         </div>
@@ -221,7 +221,7 @@
 
                     <div class="slides2">
                         <div class="photo-number">6 / 6</div>
-                        <img src="/photos/balcony.jpg" alt="">
+                        <img src="/photos/fjordsap/balcony.jpeg" alt="">
                         <div class="photo-room2">
                             <p>Balcony</p>
                         </div>
