fixed some issues

--- a/html-files/ap-detail.html
+++ b/html-files/ap-detail.html
@@ -268,8 +268,8 @@
 
                         <div class="property-owner">
                             <span>Real Estate Agent</span>
-                            <img src="/photos/agents/agent7.jpeg" alt="">
-                            <h4>Fredrik Paul</h4>
+                            <img src="/photos/agents/agent1.jpg" alt="">
+                            <h4>Malin Jakobsen</h4>
                             <div class="stars">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
