--- a/buy-files/germany.html
+++ b/buy-files/germany.html
@@ -259,6 +259,57 @@
                     </div>
                 </div>
             </div>
+            <div class="property-hamburg-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/eight.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$8.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-hamburg-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/eleven.webp" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$11.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-hamburg-last">
+                <div class="estate-photo">
+                    <img src="../photos/fabian-wiktor-MBKFuFqlMwo-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$19.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-frankfurt wrap">
